; ModuleID = '/home/carl/AnghaBench/git/extr_remote.c_valid_remote.c'
source_filename = "/home/carl/AnghaBench/git/extr_remote.c_valid_remote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.remote = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.remote*)* @valid_remote to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @valid_remote(%struct.remote* %0) #0 {
  %2 = alloca %struct.remote*, align 8
  store %struct.remote* %0, %struct.remote** %2, align 8
  %3 = load %struct.remote*, %struct.remote** %2, align 8
  %4 = getelementptr inbounds %struct.remote, %struct.remote* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %14, label %7

7:                                                ; preds = %1
  %8 = load %struct.remote*, %struct.remote** %2, align 8
  %9 = getelementptr inbounds %struct.remote, %struct.remote* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  %13 = xor i1 %12, true
  br label %14

14:                                               ; preds = %7, %1
  %15 = phi i1 [ true, %1 ], [ %13, %7 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
